# them-candles-stink

./: CMakeLists.txt  README.md  main.cpp  start.sh
.github/workflows/: gtests.yml
